test/files/neg/t11374b.scala

class C {
  val Some(`_`) = Option(42)  // was crashola

  def f(): Unit = {
    val Some(`_`) = Option(42)  // was crashola
  }
}
